--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ function clearText(field)
             </div>
             <div id="caption1" class="nivo-html-caption">
             	<h1>Le Tabernacle Des Chretiens </h1>
-                <p>Bienvenu a notre assemblee.&nbsp;</p>
+                <p>Bienvenue a notre assemblee.&nbsp;</p>
             </div>
             <div id="caption2" class="nivo-html-caption">
                 <h1>Notre theme actuel</h1>
